# rotten_tomatoes_client

./: .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
rotten_tomatoes/: client.py
rotten_tomatoes/query/: __init__.py
rotten_tomatoes/query/parameters/: browsing.py
rotten_tomatoes/query/parameters/builders/: browsing.py
rotten_tomatoes_client/: __init__.py  client.py  exceptions.py
rotten_tomatoes_client/query/: __init__.py
rotten_tomatoes_client/query/parameters/: browsing.py
rotten_tomatoes_client/query/parameters/builders/: browsing.py
tests/: test_movieBrowsingQueryParametersBuilder.py  test_rottenTomatoesClient.py
