[tool.poetry]
name = "rotten_tomatoes_client"
version = "1.0.0"
description = "A client to access data on rottentomatoes.com"
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
maintainers = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"
keywords = ["Movies", "TV", "Rotten Tomatoes"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
repository = "https://github.com/jaebradley/rotten_tomatoes_client/"
homepage = "https://github.com/jaebradley/rotten_tomatoes_client/"
documentation= "https://github.com/jaebradley/rotten_tomatoes_client/"
readme = "README.md"
exclude = [
    "tests",
    "dist",
    ".github",
    ".pytest_cache",
    ".coveragerc",
    ".pylintrc",
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.14.2"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
pytest = "^6.1.2"
pylint = "^2.12.2"

[tool.poetry.urls]
issues = "https://github.com/jaebradley/rotten_tomatoes_client/issues"
pull_requests = "https://github.com/jaebradley/rotten_tomatoes_client/pull_requests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"